css/_custom.scss
//  ja.do custom style

.wp-block-gallery{
  &.swiper-initialized{
    overflow: hidden;
    margin: 0;
    position: relative;

    figcaption{
      &.blocks-gallery-caption{
        position: absolute;
        z-index: 12;
        top: 0;
        width: 100%;
        display: block;
      }
    }
  }
  .swiper-slide{
    margin-bottom: 0;

    figcaption{
      padding-bottom: 2em !important;
    }
    img{
      margin-bottom: 0 !important;
    }
  }
}

.swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction{
  bottom: 0 !important;
}

.swiper-button-prev, .swiper-button-next{
  top: 45% !important;
  border: none;
  outline: none;
}

